--- a/Groupwork/Final_Project/news.css
+++ b/Groupwork/Final_Project/news.css
@@ -1,4 +1,10 @@
-
+body{
+  background: rgba(220, 180, 108, 1);
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  color: rgb(193,67,71);
+  margin: 0% 0%;
+  padding: 0px;
+}
 .wholecontent{
   margin: 0% 15%;
 }
@@ -44,14 +50,13 @@
 
 .topicdiv2{
   border: solid rgba(193,67,71,1) 3px;
-  min-width: 70%;
+  max-width: 50%;
   border-radius: 10px;
   padding: 1% 2%;
   display: inline-flex;
   overflow: auto;
   color: rgb(193,67,71);
-  margin: 1% 15%;
-  justify-content: space-evenly;
+  margin: 0%;
   background-color: rgba(243, 188, 134, 0.9);
 }
 
@@ -71,10 +76,13 @@
   display: inline-flex;
   overflow: auto;
   color: rgb(193,67,71);
-  margin-bottom: 2%;
+  margin-top: 2%;
   background-color: rgb(33, 33, 33);
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
-
 .topicdiv img{
   position: relative;
   padding-left: 5%;
